# description-generator

./: README.md  pyproject.toml
src/description_generator/: __init__.py  converter.py  llm_chat.py  main.py  models.py  openai_api.py  rinna_gpt.py  wikipedia.py
