[project]
name = "description-generator"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "html2text>=2020.1.16",
    "pandas>=2.0.3",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "python-dotenv>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true
